[package]
name = "sftp-filesystem"
version = "0.1.0"
authors = ["Mike Cronce <mike@quadra-tec.net>"]
edition = "2018"

[features]
default = ["standalone"]
standalone = ["sftp_server/standalone", "thrussh", "thrussh-keys"]
legacy = ["sftp_server/legacy"]

[dependencies]
async-trait = "0.1"
anyhow = "1"
chrono = "0.4"
env_logger = "0.8"
envconfig = "0.9"
filetime = "0.2"
lazy_static = "1.4"
nix = "0.19"
thrussh = {version = "0.29", optional = true}
thrussh-keys = {version = "0.18", optional = true}
tokio = {version = "0.2", features = ["blocking", "fs", "macros", "rt-threaded", "stream"]}

sftp_protocol = {path = "../sftp-protocol"}
sftp_server = {path = "../sftp-server"}

