[package]
name = "sftp_server"
version = "0.1.0"
authors = ["Mike Cronce <mike@quadra-tec.net>"]
edition = "2018"

[features]
default = ["standalone"]
standalone = ["thrussh", "thrussh-keys"]
legacy = ["tokio/io-std"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1"
chrono = "0.4"
filetime = "0.2"
futures = "0.3"
lazy_static = "1.4"
lexiclean = "0.0.1"
nix = "0.19"
thiserror = "1"
thrussh = {version = "0.29", optional = true}
thrussh-keys = {version = "0.18", optional = true}
tokio = {version = "0.2", features = ["blocking", "fs"]}
uuid = {version = "0.8", features = ["serde", "v4"]}

sftp_protocol = {path = "../sftp-protocol"}

